--- a/index.html
+++ b/index.html
@@ -5,7 +5,123 @@
   <title>Müzik Sitesi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    /* Stil kodları burada */
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+      background: #f1f1f6;
+    }
+    .sidebar {
+      width: 280px;
+      background: linear-gradient(to bottom right, #1e1e2f, #2b2b44);
+      color: white;
+      padding: 20px;
+      overflow-y: auto;
+      box-shadow: 2px 0 10px rgba(0, 0, 0, 0.3);
+    }
+    .sidebar h2 {
+      margin-top: 0;
+      font-size: 24px;
+      border-bottom: 1px solid #444;
+      padding-bottom: 10px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .music-item {
+      margin-bottom: 15px;
+      cursor: pointer;
+      background: #2d2d3f;
+      padding: 10px;
+      border-radius: 10px;
+      transition: background 0.2s, transform 0.2s;
+    }
+    .music-item:hover {
+      background: #3e3e5c;
+      transform: scale(1.03);
+    }
+    .music-item img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-bottom: 5px;
+    }
+    .main {
+      flex: 1;
+      background: linear-gradient(to bottom right, #f9f9fa, #e6e6eb);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      padding: 40px;
+    }
+    #adminButton {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 10px 20px;
+      background: #1e1e2f;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: background 0.2s;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    #adminButton:hover {
+      background: #35354d;
+    }
+    .admin-panel {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0,0,0,0.85);
+      color: white;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 100;
+      padding: 30px;
+    }
+    .admin-panel input, .admin-panel button, .admin-panel select {
+      margin: 10px;
+      padding: 12px 15px;
+      border-radius: 6px;
+      border: none;
+      font-size: 16px;
+    }
+    .admin-panel input[type="password"], .admin-panel input[type="text"] {
+      width: 250px;
+    }
+    .admin-panel button {
+      background: #1e1e2f;
+      color: white;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .admin-panel button:hover {
+      background: #35354d;
+    }
+    #coverImage {
+      border: 5px solid #ddd;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+    audio {
+      width: 100%;
+      max-width: 500px;
+    }
   </style>
 </head>
 <body>
